pending/yumzibah.yaml
apiVersion: v1
kind: Service
metadata:
  name: yumzibah
spec:
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: yumzibah
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: yumzibah
spec:
  replicas: 4
  selector:
    matchLabels:
      app: yumzibah
  template:
    metadata:
      labels:
        app: yumzibah
    spec:
      containers:
        - name: nginx
          image: nginx:1.17.3
          ports:
            - containerPort: 80
